--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>BG1 Documentation</title>
 <script id="bm-script">
   (() => {
-    var u = 'https://joelface.github.io/bg1/', d = document;
+    var u = 'https://dallasodom.github.io/bg1/', d = document;
     if (origin.match(/https:\/\/.+\.disney(?:\.go)?\.com/)) {
       d.open();
       d.write('<!doctype html><link rel=stylesheet href="' + u + 'bg1.css"><body>');
@@ -98,11 +98,11 @@
 
     <p>BG1 is an unofficial, experimental client for obtaining virtual queue boarding groups at the Walt Disney World and Disneyland resorts.</p>
 
-    <p>The code is open source and <a href="https://github.com/joelface/bg1">available on GitHub</a>.</p>
+    <p>The code is open source and <a href="https://github.com/dallasodom/bg1">available on GitHub</a>.</p>
 
-    <h2>Why did you make this?</h2>
+    <h2>Why did Joel make this?</h2>
 
-    <p>I originally created BG1 to demonstrate how the virtual queue interface in the Walt Disney World app could be tweaked to provide guests with a less frustrating user experience. Many of these improvements were eventually incorporated into the WDW and Disneyland apps. A subsequent update to BG1 brought a similarly streamlined experience to the Genie+ service, but sadly this functionality is no longer available.</p>
+    <p>Joel originally created BG1 to demonstrate how the virtual queue interface in the Walt Disney World app could be tweaked to provide guests with a less frustrating user experience. Many of these improvements were eventually incorporated into the WDW and Disneyland apps. A subsequent update to BG1 brought a similarly streamlined experience to the Genie+ service, but sadly this functionality is no longer available.</p>
 
     <h2>How does it work?</h2>
 
@@ -175,7 +175,7 @@
     <dl>
       <dt>Why is it not working? All I see is a page of "code".</dt>
       <dd>
-        <p>As I mentioned in the instructions above, tapping a button on the <a href="start.html">BG1 Start</a> page doesn't load BG1 on its own. It just takes you to the page you need to be on for the bookmarklet to work. The BG1 interface will only appear after you've run the bookmarklet on the "code" page.</p>
+        <p>As mentioned in the instructions above, tapping a button on the <a href="start.html">BG1 Start</a> page doesn't load BG1 on its own. It just takes you to the page you need to be on for the bookmarklet to work. The BG1 interface will only appear after you've run the bookmarklet on the "code" page.</p>
         <p>If it still isn't working, here are some other troubleshooting tips:</p>
         <ul>
           <li>Make sure you're carefully following the instructions for the specific phone/browser combination you're using. Watch (or rewatch) the YouTube video linked at the top of the instructions page for your browser.</li>
@@ -192,7 +192,7 @@
       </dd>
       <dt>Why not a mobile app? Wouldn't you be able to make this easier to use?</dt>
       <dd>
-        <p>Sure, but this isn't intended for widespread use (or any use at all, really). BG1 is simply a personal experiment that I made public in the hope that some of its ideas might eventually make their way into the official app.</p>
+        <p>Sure, but this isn't intended for widespread use (or any use at all, really). BG1 is simply a personal experiment that Joel made public in the hope that some of its ideas might eventually make their way into the official app.</p>
       </dd>
     </dl>
   </main>
@@ -201,7 +201,7 @@
     <ul>
       <li><a href="start.html">BG1 Start</a></li>
       <li><a href="contact.html">About BG1</a></li>
-      <li><a href="https://github.com/joelface/bg1">GitHub</a></li>
+      <li><a href="https://github.com/joelface/bg1">Joel's BG1 GitHub</a></li>
     </ul>
   </footer>
 
