--- a/contact.html
+++ b/contact.html
@@ -15,23 +15,19 @@
 </header>
 
 <main>
+  <p>Hi, my name is Dallas. This is a personal fork of Joel's BG1 app.</p>
+  <p>Joel's original About introduction is below:</p>
   <p>Hi, I'm Joel! I've been a Disney theme park fan since my very first trip to Walt Disney World as a kid. When I'm not watching a WDW or Disneyland live stream, there's a good chance I'm listening to classic EPCOT background area music.</p>
 
   <p>I created BG1 after reading endless complaints online from people who lost out on a chance to ride the groundbreaking new Rise of the Resistance attraction because of <a href="https://forums.wdwmagic.com/threads/star-wars-rise-of-the-resistance-opening-reports-and-using-boarding-groups-at-disneys-hollywood-studios.962202/post-9099618">seemingly random technical issues with Disney's app</a>. Many of the enhancements introduced by BG1 were later implemented in the official apps, creating a less frustrating experience for the millions of guests who visit Disney's parks every year.</p>
 
   <p>I later updated BG1 to help guests get the most out of the Genie+ service, with a more user-friendly, streamlined interface for finding and booking the best Lightning Lanes. (Unfortunately, this functionality is no longer available.)</p>
-
-  <h2 id="contact">Contact Me</h2>
-
-  <p>If you'd like to get in touch, feel free to email me:</p>
-
-  <div class="buttons"><button type="button" data-a1="joel&#x40;joel" data-a2="face&#x2e;com" onclick="location.href = 'mailto:' + this.dataset.a1 + this.dataset.a2" class="plsnospam"></button></div>
 </main>
 
 <footer>
   <ul>
     <li><a href=".">Documentation</a></li>
     <li><a href="start.html">BG1 Start</a></li>
-    <li><a href="https://github.com/joelface/bg1">GitHub</a></li>
+    <li><a href="https://github.com/joelface/bg1">Joel's BG1 GitHub</a></li>
   </ul>
 </footer>
