--- a/start.html
+++ b/start.html
@@ -67,7 +67,7 @@
   <ul>
     <li><a href=".">Documentation</a></li>
     <li><a href="contact.html">About BG1</a></li>
-    <li><a href="https://github.com/joelface/bg1">GitHub</a></li>
+    <li><a href="https://github.com/dallasodom/bg1">GitHub</a></li>
   </ul>
 </footer>
 
